--- a/Humanize/Humanize.csproj
+++ b/Humanize/Humanize.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="Humanizer" Version="2.14.*" />
   </ItemGroup>
 
 </Project>
